--- a/index.html
+++ b/index.html
@@ -2,19 +2,31 @@
     <head>
         <title>Homepage</title>
         <link rel="stylesheet" href="login.css">
+        <script src="https://kit.fontawesome.com/b1035d2480.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header>
             <div class="header-banner">
                 <div class="banner-container">
                     <a href="">Logo</a>
-                <ul>
-                    <li><a class="signup" href="signUp.html">Sign Up</a></li>
-                    <li><a class="login" href="logIn.html">Log In</a></li>
-                </ul>
+                    <ul>
+                        <li><a class="signup" href="signUp.html">Sign Up</a></li>
+                        <li><a class="login" href="logIn.html">Log In</a></li>
+                    </ul>
                 
                 </div>
-                <div class="banner-bottom"></div>
+                <ul class="banner-option">
+
+                    <div class="search">
+                        <i class="fas fa-search"></i>
+                        <input type="text" placeholder="Search">
+                    </div>
+                    <li><i class="fas fa-bell fa-2x"></i></li>
+                    <li><i class="fas fa-inbox fa-2x"></i></li>
+                    <li><i class="fas fa-chart-bar fa-2x"></i></li>
+                    <li><i class="fas fa-plus fa-2x"></i></li>
+                    <li><i class="fas fa-cogs fa-2x"></i></li>
+                </ul>
             </div>
             
         </header>
