changes to banner.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
                 <div class="banner-container">
                     <a href="">Logo</a>
                     <ul>
-                        <li><a class="signup" href="signUp.html">Sign Up</a></li>
-                        <li><a class="login" href="logIn.html">Log In</a></li>
+                        <li><a class="bbtn" href="signUp.html">Sign Up</a></li>
+                        <li><a class="bbtn" href="logIn.html">Log In</a></li>
                     </ul>
                 
                 </div>
@@ -19,7 +19,7 @@
 
                     <div class="search">
                         <i class="fas fa-search"></i>
-                        <input type="text" placeholder="  Search">
+                        <input type="text" placeholder="Search">
                     </div>
                     <li><i class="fas fa-bell fa-2x"></i></li>
                     <li><i class="fas fa-inbox fa-2x"></i></li>
