Banner fixed with body.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <header>
             <div class="header-banner">
                 <div class="banner-container">
-                    <a href="">Logo</a>
+                    <img class="logo" src="images/anime-eye-logo-illustration-260nw-1729729732.svg" alt="">
                     <ul>
                         <li><a class="bbtn" href="signUp.html">Sign Up</a></li>
                         <li><a class="bbtn" href="logIn.html">Log In</a></li>
@@ -33,6 +33,5 @@
         <div class="flex-box">
             <div class="page"></div>
         <div class="sidebar"></div>
-        </div>
     </body>
 </html>
