Added banner for signup and login.

--- a/logIn.html
+++ b/logIn.html
@@ -6,9 +6,35 @@
   src="https://code.jquery.com/jquery-3.6.0.js"
   integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
   crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/b1035d2480.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <div class="box-container">
+        <header>
+            <div class="header-banner">
+                <div class="banner-container">
+                    <img class="logo" src="images/anime-eye-logo-illustration-260nw-1729729732.svg" alt="">
+                    <ul>
+                        <li><a class="bbtn" href="signUp.html">Sign Up</a></li>
+                        <li><a class="bbtn" href="logIn.html">Log In</a></li>
+                    </ul>
+                
+                </div>
+                <ul class="banner-option">
+
+                    <div class="search">
+                        <i class="fas fa-search"></i>
+                        <input type="text" placeholder="Search">
+                    </div>
+                    <li><i class="fas fa-bell fa-2x"></i></li>
+                    <li><i class="fas fa-inbox fa-2x"></i></li>
+                    <li><i class="fas fa-chart-bar fa-2x"></i></li>
+                    <li><i class="fas fa-plus fa-2x"></i></li>
+                    <li><i class="fas fa-cogs fa-2x"></i></li>
+                </ul>
+            </div>
+            
+        </header>
+        <div class="box-container flex-box">
             <div class="box">
                 <h1 class="heading">Welcome Back</h1>
                 <form action="">
