--- a/logIn.html
+++ b/logIn.html
@@ -25,6 +25,7 @@
                         <i class="fas fa-search"></i>
                         <input type="text" placeholder="Search">
                     </div>
+                    <li><i class="fas fa-home fa-2x"></i></li>
                     <li><i class="fas fa-bell fa-2x"></i></li>
                     <li><i class="fas fa-inbox fa-2x"></i></li>
                     <li><i class="fas fa-chart-bar fa-2x"></i></li>
