Added Thumbnail image.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,15 @@
             
         </header>
         <div class="flex-box">
-            <div class="page"></div>
+            <div class="page">
+                <h2 class="para">Hey,There</h2>
+                <div class="grid-container">
+                    <ul class="thumbnail">
+                        <li><img  src="images/220px-Eizouken_ni_wa_Te_o_Dasu_na!_volume_1_cover.png" alt=""><span class="title">Keep Hands Off</span></li>
+                    </ul>
+                </div>
+            </div>
         <div class="sidebar"></div>
+    </div>
     </body>
 </html>
