Changes to thumbnail and sidebar.

--- a/index.html
+++ b/index.html
@@ -33,14 +33,26 @@
         </header>
         <div class="flex-box">
             <div class="page">
-                <h2 class="para">Hey,There</h2>
+                <h2 class="txt-con">Anime</h2>
                 <div class="grid-container">
                     <ul class="thumbnail">
-                        <li><img  src="images/220px-Eizouken_ni_wa_Te_o_Dasu_na!_volume_1_cover.png" alt=""><span class="title">Keep Hands Off</span></li>
+                        <li><img  src="images/220px-Eizouken_ni_wa_Te_o_Dasu_na!_volume_1_cover.png" alt="">Keep Hands off Eizuken</li>
+                        <li><img src="https://m.media-amazon.com/images/M/MV5BMDkxZTJjZTEtMDRjMy00Yzk1LWI5YjItMjIwYmVlYzhlZWZhXkEyXkFqcGdeQXVyNDQxNjcxNQ@@._V1_.jpg" alt="">Gintama</li>
+                        <li><img src="https://images-na.ssl-images-amazon.com/images/I/51jyS5sB9LL._SX347_BO1,204,203,200_.jpg" alt="">Uramichi Oniisan</li>
+                        <li><img src="https://m.media-amazon.com/images/M/MV5BZjYxMGRlZDAtYTU5Ny00NzhmLTgzYzgtNjNjNTZiZDQ5ZjU0XkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_.jpg" alt="">Devilman Crybaby</li>
+                        <li><img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/66/KonoSuba_film_poster.jpg/220px-KonoSuba_film_poster.jpg" alt="">Konosuba</li>
+                        <li><img src="https://cdn.myanimelist.net/images/anime/12/39497.jpg" alt="">Boku no pico</li>
                     </ul>
                 </div>
             </div>
-        <div class="sidebar"></div>
+        <div class="sidebar">
+            <ul>
+                <li>Top Airing Anime</li>
+                <li>Top Seasonal Anime</li>
+                <li>Top 10 Anime</li>
+                <li>Friends List</li>
+            </ul>
+        </div>
     </div>
     </body>
 </html>
